--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,13 @@
-<p>
-  home works!
-</p>
+<main class="mt-5">
+    <div class="container">
+        <app-popular></app-popular>
+
+        <hr class="my-5">
+
+        <app-features></app-features>
+
+        <hr class="my-5">
+
+        <app-contact></app-contact>
+    </div>
+</main>
