adding search component and material design module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,20 @@
+<!--Mask-->
+<div class="view">
+    
+    <section>
+    	
+    	<img src="assets/images/bg-bus-1.jpg" class="img-fluid stretch">
+    	
+    	<app-search></app-search>
+
+  </section>
+
+
+</div>
+<!--/.Mask-->
+
 <main class="mt-5">
+	
     <div class="container">
         <app-popular></app-popular>
 
