search results first version

--- a/src/app/home/search-results/search-results.component.html
+++ b/src/app/home/search-results/search-results.component.html
@@ -2,6 +2,29 @@
 
 	<div class="row" style="height:150px;"></div>
 	
+	
+	<div class="card indigo" id="results_1">
+	    <div class="card-body">
+	    	<div class="row  text-light">
+	    		<div class="col-md-3">
+	    			<span class="h5">Hyderabad</span>
+	    		</div>
+	    		<div class="col-md-1">
+	    				<span class="h5"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+	    		</div>
+	    		<div class="col-md-4">
+	    				<span class="h5">Banglore</span>
+	    		</div>
+	    		<div class="col-md-2">
+	    				<span class="h5">15-09-2018</span>
+	    		</div>
+	    		<div class="col-md-2">
+	    				<span class="h5">1 Person</span>
+	    		</div>
+	   			
+	    	</div>
+	    </div>
+	</div>
 	<div *ngFor="let number of [0,1,2,3,4]" class="card" id="results_1">
 	    <div class="card-body">
 	    	<div class="row">
@@ -38,6 +61,8 @@
 	    	</div>
 	    </div>
 	</div>
+	
+	<div class="fixed-ht-100"></div>
 	
 	
 </div>
