--- a/src/app/home/search-results/search-results.component.html
+++ b/src/app/home/search-results/search-results.component.html
@@ -7,16 +7,16 @@
 	    <div class="card-body">
 	    	<div class="row  text-light">
 	    		<div class="col-md-3">
-	    			<span class="h5">Hyderabad</span>
+	    			<span class="h5">{{ from }}</span>
 	    		</div>
 	    		<div class="col-md-1">
 	    				<span class="h5"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
 	    		</div>
 	    		<div class="col-md-4">
-	    				<span class="h5">Banglore</span>
+	    				<span class="h5">{{ to }}</span>
 	    		</div>
 	    		<div class="col-md-2">
-	    				<span class="h5">15-09-2018</span>
+	    				<span class="h5">{{ onwardDate }}</span>
 	    		</div>
 	    		<div class="col-md-2">
 	    				<span class="h5">1 Person</span>
