--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -5,7 +5,7 @@
 	
 	        <!-- Navbar brand -->
 	        
-	        <a class="navbar-brand" href="#">prayanam&nbsp;<i class="fa fa-bus" aria-hidden="true"></i></a>
+	        <a class="navbar-brand" [routerLink]="['/home']">prayanam&nbsp;<i class="fa fa-bus" aria-hidden="true"></i></a>
 	
 	        <!-- Collapse button -->
 	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -19,18 +19,18 @@
 	            <!-- Links -->
 	            <ul class="navbar-nav mr-auto">
 	                <li class="nav-item active">
-	                    <a class="nav-link" href="#">BOOK A TRIP
+	                    <a class="nav-link" [routerLink]="['/book']">BOOK A TRIP
 	                        <span class="sr-only">(current)</span>
 	                    </a>
 	                </li>
 	                <li class="nav-item">
-	                    <a class="nav-link" href="#">EXPLORE PLACES</a>
+	                    <a class="nav-link" [routerLink]="['/explore']">EXPLORE PLACES</a>
 	                </li>
 	                <li class="nav-item">
-	                    <a class="nav-link" href="#">MANAGE YOUR TRIPS</a>
+	                    <a class="nav-link" [routerLink]="['/manage']">MANAGE YOUR TRIPS</a>
 	                </li>
 	                <li class="nav-item">
-	                    <a class="nav-link" href="#">HELP</a>
+	                    <a class="nav-link" [routerLink]="['/help']">HELP</a>
 	                </li>
 	
 	            </ul>
@@ -38,10 +38,10 @@
 	
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-	                    <a class="nav-link" href="#"><i class="fa fa-map-marker" aria-hidden="true">&nbsp;Hyderabad</i></a>
+	                    <a class="nav-link" [routerLink]="['/home']"><i class="fa fa-map-marker" aria-hidden="true">&nbsp;Hyderabad</i></a>
 	                </li>
 	                <li class="nav-item">
-	                    <a class="nav-link" href="#"><i class="fa fa-user" aria-hidden="true">&nbsp;Baddam</i></a>
+	                    <a class="nav-link" [routerLink]="['/home']"><i class="fa fa-user" aria-hidden="true">&nbsp;Baddam</i></a>
 	                </li>
 	                
 	            </ul>
